# 0ctx

./: .env.example  .gitignore  0ctx-agent-setup.md  0ctx-strategy-v2.docx  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  docx_extract.txt  ona_home.html  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.0ctx/: settings.local.json
.claude/: launch.json  settings.local.json
.codex/: config.toml
.cursor/: hooks.json
.factory/: settings.json
.gemini/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.windsurf/: hooks.json
desktop-app/: README.md  electron-builder.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.renderer.json  vite.config.ts  vitest.config.mjs  vitest.config.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/: ALERTING_RUNBOOK.md  CONNECTOR_SERVICE_ARCHITECTURE.md  DATA_POLICY.md  DEPLOYMENT_UI.md  DESKTOP_DESIGN_BRIEF.md  DESKTOP_DESIGN_VISUAL_DIRECTION.md  DISTRIBUTION_STRATEGY.md  ENTERPRISE_ROADMAP_AND_TRACKER.md  ENVIRONMENT_VARIABLES.md  ENV_REFERENCE.md  GITHUB_ENABLEMENT_RUNBOOK.md  GITHUB_REPO_MANAGEMENT.md  GITHUB_SETTINGS_CHECKLIST.md  GIT_COMMIT_SEQUENCE.md  HOSTED_UI_ONBOARDING_SPEC.md  HOSTED_UI_PRODUCT_ARCHITECTURE.md  HYBRID_STORAGE_AND_SYNC_MODEL.md  INDEX.md  INSTALL.md  INTEGRATIONS.md  LINEAR_BACKLOG.md  ONBOARDING.md  OPS_SLO_AND_OBSERVABILITY.md  PLAN_STATUS.md  (+9 more)
(+308 files in other folders)
