[package]
name = "ctx-desktop"
version = "0.1.0"
description = "0ctx Desktop — system tray companion for context graph management"
authors = ["0ctx"]
edition = "2021"

[lib]
name = "ctx_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ctx-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
